--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,35 @@
+eccodes-python (2:1.6.0-1) unstable; urgency=medium
+
+  * New upstream release
+  * Standards-Version: 4.6.2
+
+ -- Alastair McKinstry <mckinstry@debian.org>  Sat, 15 Jul 2023 17:06:46 +0100
+
+eccodes-python (2:1.5.1-1) experimental; urgency=medium
+
+  * New upstream release
+
+ -- Alastair McKinstry <mckinstry@debian.org>  Fri, 27 Jan 2023 13:57:41 +0000
+
+eccodes-python (2:1.5.0-1) unstable; urgency=medium
+
+  * New upstream release
+  * Standards-Version: 4.6.1
+
+ -- Alastair McKinstry <mckinstry@debian.org>  Fri, 26 Aug 2022 09:12:33 +0100
+
+eccodes-python (2:1.4.2-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Alastair McKinstry <mckinstry@debian.org>  Thu, 19 May 2022 14:36:01 +0100
+
+eccodes-python (2:1.4.0-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Alastair McKinstry <mckinstry@debian.org>  Wed, 08 Dec 2021 20:04:33 +0000
+
 eccodes-python (2:1.3.4-4) unstable; urgency=medium
 
   * Dep on libeecodes-dev, not libeccodes0
